# chatterbox-service

./: .gitignore  Dockerfile  Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml  test.html  test_ws_client.py  tts-service-prd.md
docs/: LOL_COMMENTER_GUIDE.md
gateway/: main.py  models.py  requirements.txt
rust-tts/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.gpu.yml  docker-compose.yml
rust-tts/examples/: simple_tts.rs  streaming.rs  voice_cloning.rs
rust-tts/src/: audio.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  python.rs  server.rs
