[package]
name = "chatterbox-tts"
version = "0.1.0"
edition = "2021"
authors = ["Chatterbox Team"]
description = "High-performance Rust TTS inference service using Chatterbox models"
license = "MIT"
readme = "README.md"

[lib]
name = "chatterbox_tts"
path = "src/lib.rs"

[[bin]]
name = "chatterbox-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Python interop
pyo3 = { version = "0.21", features = ["auto-initialize", "abi3-py310"] }
numpy = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio processing
hound = "3.5"
rubato = "0.15"
dasp = { version = "0.11", features = ["signal", "interpolate", "sample", "ring_buffer"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
bytes = "1.5"
parking_lot = "0.12"
once_cell = "1.19"
arc-swap = "1.7"
crossbeam-channel = "0.5"

# Base64 encoding for audio
base64 = "0.22"

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["standard"]
standard = []
turbo = []
multilingual = []
cuda = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
