[package]
name = "chatterbox-tts"
version = "0.1.0"
edition = "2021"
authors = ["Chatterbox Team"]
description = "High-performance Rust TTS library using Chatterbox models with PyO3 Python bindings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/grait-io/chatterbox-service"
keywords = ["tts", "text-to-speech", "voice", "audio", "ai"]
categories = ["multimedia::audio", "api-bindings"]

[lib]
name = "chatterbox_tts"
path = "src/lib.rs"

[[bin]]
name = "chatterbox-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[example]]
name = "simple_tts"
path = "examples/simple_tts.rs"

[[example]]
name = "voice_cloning"
path = "examples/voice_cloning.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"
required-features = ["server"]

[dependencies]
# Python interop (core requirement)
pyo3 = { version = "0.21", features = ["auto-initialize", "abi3-py310"] }
numpy = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio processing
hound = "3.5"
rubato = "0.15"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Utilities
parking_lot = "0.12"
once_cell = "1.19"

# Async runtime (optional, for server)
tokio = { version = "1.36", features = ["full", "macros", "rt-multi-thread"], optional = true }
futures-util = { version = "0.3", optional = true }

# Web framework (optional, for server)
axum = { version = "0.7", features = ["ws", "multipart"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"], optional = true }

# Configuration (optional, for server)
dotenvy = { version = "0.15", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }

# Utilities (optional, for server)
uuid = { version = "1.7", features = ["v4", "serde"], optional = true }
bytes = { version = "1.5", optional = true }
base64 = { version = "0.22", optional = true }
anyhow = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "macros", "rt-multi-thread"] }
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []
# Server feature enables HTTP/WebSocket server
server = [
    "dep:tokio",
    "dep:futures-util",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:dotenvy",
    "dep:tracing-subscriber",
    "dep:uuid",
    "dep:bytes",
    "dep:base64",
    "dep:anyhow",
]
# Full feature enables everything
full = ["server"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
